# VerityMesh

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LEARNING_LOG.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: README.md
apps/api/: README.md
apps/web/: README.md
apps/worker/: README.md
benchmarks/support-v1/: README.md
benchmarks/support-v1/suites/: fake-support-suite.json
deploy/compose/: README.md
docs/: EXECUTION_PLAN.md
docs/adr/: 0001-modular-monolith.md
docs/architecture/: README.md
docs/operations/: README.md  market-and-model-watch.md
docs/reference/: README.md  cli.md  core-functionality.md  result-bundle-schema.md  run-lifecycle.md  scorers.md  suite-schema.md
docs/threat-model/: README.md
tests/end-to-end/: README.md
tests/integration/: README.md
tests/load/: README.md
tests/security/: README.md
tests/unit/: README.md  _paths.py  test_cli.py  test_runner.py  test_scorers.py  test_suite_contract.py
